# CMath

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  benchmark.c  cm_vector.h  cmath.c  cmath.h  cmath_jit_llvm.cpp  cmath_jit_llvm.h  example.c  jit_test.c  native_test.c  test_optimization.c
.github/workflows/: ci.yml
test/: Makefile  README.md  test_cmath.c  test_vectorized.c
